# speechmatics_claude_code_mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py  transcriber.py  utils.py
