[project]
name = "transcription-mcp"
version = "1.0.0"
description = "MCP server for audio/video transcription using Speechmatics Batch API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.1",
    "speechmatics-batch>=0.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]
